--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -30,6 +30,10 @@ p {
 
   @media screen and (min-width: 640px) {
     padding: 0 5.5rem;
+
+    &--flush {
+      padding: 0;
+    }
   }
 }
 
