--- a/scss/bundle.scss
+++ b/scss/bundle.scss
@@ -1,6 +1,7 @@
 .bundle {
   background: $color-white;
-  padding: 1.5rem; // 24px
+  padding-top: 1.5rem; // 24px
+  padding-bottom: 1.5rem; // 24px
   border: 0.0625rem solid $color-black; // 1px
   margin-top: 1.5rem; // 24px
 
@@ -25,6 +26,7 @@
     padding: 0.4rem 1rem;
     border-radius: 999px;
     margin-bottom: 1.75rem; // 28px
+    text-align: center;
   }
 
   &__title {
